--- a/templates/registro/index.html.twig
+++ b/templates/registro/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RegistroController!{% endblock %}
+{% block title %}
+{{ parent() }}-RegistroController
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/frikili/src/Controller/RegistroController.php'|file_link(0) }}">src/Controller/RegistroController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/frikili/templates/registro/index.html.twig'|file_link(0) }}">templates/registro/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class = "container h-100">
+        <div class = "row h-100 justify-content-center align-items-center">
+            <div class = "col-8 bg-white rounded my-3 p-5" >
+                <h1>Registro</h1>
+                {{ form(formulario) }}
+            </div>        
+        </div>
+    </div>
+    
+    
 {% endblock %}
